storage/syncthing/overlays/prod/resources/ingressroute-authentik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: storage
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: storage.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: syncthing-web
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`syncthing.storage.anotherlife.org.pl`)
    middlewares:
    - name: authentik
      namespace: traefik
    priority: 10
    services:
    - kind: TraefikService
      name: syncthing-web
      port: 8384
  - kind: Rule
    match: "Host(`syncthing.storage.anotherlife.org.pl`) && PathPrefix(`/outpost.goauthentik.io/`)"
    priority: 15
    services:
    - kind: Service
      name: authentik-server
      port: 9000

  tls:
    domains:
    - main: storage.anotherlife.org.pl
      sans:
      - .storage.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-storage
